REGRESSION(r154218): DFG::FixupPhase no longer turns GetById's child1 into CellUse https://bugs.webkit.org/show_bug.cgi?id=119961

Reviewed by Mark Hahnenberg.

* dfg/DFGFixupPhase.cpp:
(JSC::DFG::FixupPhase::fixupNode):



Canonical link: https://commits.webkit.org/137928@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154261 268f45cc-cd09-0410-ab3c-d52691b4dbfc